fix(bodyhealth): pin HudManagerImpl snapshot contract and null-id behavior
- HudManagerImpl uses Map.copyOf so the manager genuinely takes a
  snapshot at construction, matching the HudManager.getHuds() javadoc
  ("does not update afterwards"). Previously Collections.unmodifiableMap
  returned a live view of the caller's map.
- getHud(null) explicitly returns null instead of relying on
  Map.copyOf's NPE behavior, matching the null-tolerance pattern used
  by PlayerManagerImpl.getHudPlayer.

Adds HudManagerImplTest covering: registered lookup, unknown id, null
id, snapshot independence from caller mutation, unmodifiable result.